force-app/main/default/objects/Account/fields/Actividad__c.field-meta.xml
<CustomField>
    <fullName>Actividad__c</fullName>
    <description>Actividad</description>
    <label>Actividad</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>