force-app/main/default/objects/Account/fields/Actividad_Ec__c.field-meta.xml
<CustomField>
    <fullName>Actividad_Ec__c</fullName>
    <label>Actividad económica</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agropecuario y Materias Primas</fullName>
            </value>
            <value>
                <fullName>Alimentos y Bebidas</fullName>
            </value>
            <value>
                <fullName>Asociaciones y Cooperativas</fullName>
            </value>
            <value>
                <fullName>Automotriz (Vehículos)</fullName>
            </value>
            <value>
                <fullName>Banca y Finanzas</fullName>
            </value>
            <value>
                <fullName>Calzado y Vestuario</fullName>
            </value>
            <value>
                <fullName>Comunicaciones - Telecomunicaciones</fullName>
            </value>
            <value>
                <fullName>Construcción - Inmobiliario</fullName>
            </value>
            <value>
                <fullName>Cultural, Recreación y Deporte</fullName>
            </value>
            <value>
                <fullName>Eléctrico, Electrónico e Informático</fullName>
            </value>
            <value>
                <fullName>Industria Turística y Hotelera</fullName>
            </value>
            <value>
                <fullName>Instituciones Educativas</fullName>
            </value>
            <value>
                <fullName>Instituciones Gubernamentales (Público)</fullName>
            </value>
            <value>
                <fullName>Minería y Petróleo</fullName>
            </value>
            <value>
                <fullName>Salud y Clínicas</fullName>
            </value>
            <value>
                <fullName>Otro o General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>