force-app/main/default/objects/Account/fields/Actividad_Economica_Riesgo__c.field-meta.xml
<CustomField>
    <fullName>Actividad_Economica_Riesgo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Actividad Economica Riesgo</label>
    <referenceTo>ActividadEconomica__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>