force-app/main/default/objects/Account/fields/AIG__c.field-meta.xml
<CustomField>
    <fullName>AIG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AIG</label>
    <type>Checkbox</type>
</CustomField>