force-app/main/default/objects/Account/fields/Allianz__c.field-meta.xml
<CustomField>
    <fullName>Allianz__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allianz</label>
    <type>Checkbox</type>
</CustomField>