force-app/main/default/objects/Account/fields/ARL__c.field-meta.xml
<CustomField>
    <fullName>ARL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ARL</label>
    <type>Checkbox</type>
</CustomField>