force-app/main/default/objects/Account/fields/Asesor__c.field-meta.xml
<CustomField>
    <fullName>Asesor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asesor</label>
    <type>Checkbox</type>
</CustomField>