force-app/main/default/objects/Account/fields/Autos__c.field-meta.xml
<CustomField>
    <fullName>Autos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autos</label>
    <type>Checkbox</type>
</CustomField>