force-app/main/default/objects/Account/fields/Bol_var__c.field-meta.xml
<CustomField>
    <fullName>Bol_var__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bolívar</label>
    <type>Checkbox</type>
</CustomField>