force-app/main/default/objects/Account/fields/C_mo_se_contact_con_Global__c.field-meta.xml
<CustomField>
    <fullName>C_mo_se_contact_con_Global__c</fullName>
    <label>¿Cómo se contactó con Global?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Directamente Oficinas</fullName>
            </value>
            <value>
                <fullName>Llamada Telefónica</fullName>
            </value>
            <value>
                <fullName>Página web</fullName>
            </value>
            <value>
                <fullName>Referido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>