force-app/main/default/objects/Account/fields/C_mo_se_enter_de_Global__c.field-meta.xml
<CustomField>
    <fullName>C_mo_se_enter_de_Global__c</fullName>
    <label>¿Cómo se enteró de Global?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Eventos</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Prensa</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Recomendado por otra persona</fullName>
            </value>
            <value>
                <fullName>Revistas</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Volantes</fullName>
            </value>
            <value>
                <fullName>Amigos</fullName>
            </value>
            <value>
                <fullName>Cliente</fullName>
            </value>
            <value>
                <fullName>Colegas</fullName>
            </value>
            <value>
                <fullName>Otra Aseguradora</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>