force-app/main/default/objects/Account/fields/CalendarioA_B__c.field-meta.xml
<CustomField>
    <fullName>CalendarioA_B__c</fullName>
    <label>Calendario Colegio/Jardín</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>