force-app/main/default/objects/Account/fields/Calidad_de_Persona_GE__c.field-meta.xml
<CustomField>
    <fullName>Calidad_de_Persona_GE__c</fullName>
    <label>Calidad de Persona GE</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beneficiario Posgrado</fullName>
            </value>
            <value>
                <fullName>Beneficiario Pregrado</fullName>
            </value>
            <value>
                <fullName>Designado Educativo Posgrado</fullName>
            </value>
            <value>
                <fullName>Designado Educativo Pregrado</fullName>
            </value>
            <value>
                <fullName>Suscriptor Educativo Posgrado</fullName>
            </value>
            <value>
                <fullName>Suscriptor Educativo Pregrado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>