force-app/main/default/objects/Account/fields/Calidad_de_Persona_GS__c.field-meta.xml
<CustomField>
    <fullName>Calidad_de_Persona_GS__c</fullName>
    <label>Calidad de Persona GS</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acudiente Educativo</fullName>
            </value>
            <value>
                <fullName>Asegurado Pensiones</fullName>
            </value>
            <value>
                <fullName>Asegurado Vida Grupo</fullName>
            </value>
            <value>
                <fullName>Asegurado Vida Individual</fullName>
            </value>
            <value>
                <fullName>Asegurado Vida Individual Educativo</fullName>
            </value>
            <value>
                <fullName>Beneficiario Educativo</fullName>
            </value>
            <value>
                <fullName>Tomador Educativo</fullName>
            </value>
            <value>
                <fullName>Tomador Pensiones</fullName>
            </value>
            <value>
                <fullName>Tomador Vida Grupo</fullName>
            </value>
            <value>
                <fullName>Tomador Vida Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>