force-app/main/default/objects/Account/fields/Cantidad_de_personas__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_personas__c</fullName>
    <label>Cantidad de personas</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Maneja_Fuerza_de_Ventas__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>01 - 10</fullName>
            </value>
            <value>
                <fullName>11 - 20</fullName>
            </value>
            <value>
                <fullName>21 - 30</fullName>
            </value>
            <value>
                <fullName>31 - 40</fullName>
            </value>
            <value>
                <fullName>41 - 50</fullName>
            </value>
            <value>
                <fullName>51 - 60</fullName>
            </value>
            <value>
                <fullName>61 - 70</fullName>
            </value>
            <value>
                <fullName>71 - 80</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>