force-app/main/default/objects/Account/fields/CelularGE__c.field-meta.xml
<CustomField>
    <fullName>CelularGE__c</fullName>
    <label>Celular</label>
    <type>Phone</type>
</CustomField>