force-app/main/default/objects/Account/fields/CilindrajeMoto__c.field-meta.xml
<CustomField>
    <fullName>CilindrajeMoto__c</fullName>
    <label>Cilindraje Moto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>