force-app/main/default/objects/Account/fields/Ciudad__c.field-meta.xml
<CustomField>
    <fullName>Ciudad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ciudad o Municipio</label>
    <referenceTo>Ciudades__c</referenceTo>
    <relationshipLabel>Cuentas (Ciudad)</relationshipLabel>
    <relationshipName>Cuentas2</relationshipName>
    <type>Lookup</type>
</CustomField>