force-app/main/default/objects/Account/fields/Ciudad_Telefono_Correspondencia__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_Telefono_Correspondencia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ciudad del teléfono de correspondencia</description>
    <label>Ciudad Teléfono Correspondencia</label>
    <referenceTo>Ciudades__c</referenceTo>
    <relationshipLabel>Cuentas (Ciudad Teléfono Correspondencia)</relationshipLabel>
    <relationshipName>Cuentas5</relationshipName>
    <type>Lookup</type>
</CustomField>