force-app/main/default/objects/Account/fields/Ciudad_Telefono_CorrespondenciaGE__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_Telefono_CorrespondenciaGE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ciudad del telefono de correspondencia para GE</description>
    <label>Ciudad Teléfono Correspondencia</label>
    <referenceTo>Ciudades__c</referenceTo>
    <relationshipLabel>Cuentas (Ciudad Teléfono Correspondencia)</relationshipLabel>
    <relationshipName>Cuentas6</relationshipName>
    <type>Lookup</type>
</CustomField>