force-app/main/default/objects/Account/fields/Ciudad_Telefono_Oficina__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_Telefono_Oficina__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ciudad del telefono de la oficina</description>
    <label>Ciudad Teléfono Oficina</label>
    <referenceTo>Ciudades__c</referenceTo>
    <relationshipLabel>Cuentas (Ciudad Teléfono Oficina)</relationshipLabel>
    <relationshipName>Cuentas7</relationshipName>
    <type>Lookup</type>
</CustomField>