force-app/main/default/objects/Account/fields/Ciudad_Telefono_OficinaGE__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_Telefono_OficinaGE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ciudad del telefono de la oficina GE</description>
    <label>Ciudad Teléfono Oficina</label>
    <referenceTo>Ciudades__c</referenceTo>
    <relationshipLabel>Cuentas (Ciudad Teléfono Oficina)</relationshipLabel>
    <relationshipName>Cuentas8</relationshipName>
    <type>Lookup</type>
</CustomField>