force-app/main/default/objects/Account/fields/CiudadCorrespondencia__c.field-meta.xml
<CustomField>
    <fullName>CiudadCorrespondencia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ciudad de correspondencia</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <errorMessage>El valor no existe o no coinciden los criterios de filtro. (Ciudad de correspondencia)</errorMessage>
        <filterItems>
            <field>Ciudades__c.EsMunicipio__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Ciudades__c</referenceTo>
    <relationshipLabel>Cuentas (Ciudad de correspondencia)</relationshipLabel>
    <relationshipName>Cuentas1</relationshipName>
    <type>Lookup</type>
</CustomField>