force-app/main/default/objects/Account/fields/CiudadCorrespondenciaGE__c.field-meta.xml
<CustomField>
    <fullName>CiudadCorrespondenciaGE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ciudad de correspondencia</label>
    <referenceTo>Ciudades__c</referenceTo>
    <relationshipLabel>Cuentas (Ciudad de correspondencia)</relationshipLabel>
    <relationshipName>Cuentas4</relationshipName>
    <type>Lookup</type>
</CustomField>