force-app/main/default/objects/Account/fields/ClienteGlobalEducation__c.field-meta.xml
<CustomField>
    <fullName>ClienteGlobalEducation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cliente Global Education</label>
    <type>Checkbox</type>
</CustomField>