force-app/main/default/objects/Account/fields/ClienteGlobalSeguros__c.field-meta.xml
<CustomField>
    <fullName>ClienteGlobalSeguros__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cliente Global Seguros</label>
    <type>Checkbox</type>
</CustomField>