force-app/main/default/objects/Account/fields/Colegios_Jardines__c.field-meta.xml
<CustomField>
    <fullName>Colegios_Jardines__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Colegios – Jardines</label>
    <type>Checkbox</type>
</CustomField>