force-app/main/default/objects/Account/fields/Colpatria__c.field-meta.xml
<CustomField>
    <fullName>Colpatria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Colpatria</label>
    <type>Checkbox</type>
</CustomField>