force-app/main/default/objects/Account/fields/Compa_ia__c.field-meta.xml
<CustomField>
    <fullName>Compa_ia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compañia</label>
    <type>Checkbox</type>
</CustomField>