force-app/main/default/objects/Account/fields/Conclusiones__c.field-meta.xml
<CustomField>
    <fullName>Conclusiones__c</fullName>
    <label>Conclusiones</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>