force-app/main/default/objects/Account/fields/ConduceMoto__c.field-meta.xml
<CustomField>
    <fullName>ConduceMoto__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Está información es capturada por el Comercial</inlineHelpText>
    <label>Conduce Moto</label>
    <type>Checkbox</type>
</CustomField>