force-app/main/default/objects/Account/fields/Convenios__c.field-meta.xml
<CustomField>
    <fullName>Convenios__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convenios</label>
    <type>Checkbox</type>
</CustomField>