force-app/main/default/objects/Account/fields/Copropiedades__c.field-meta.xml
<CustomField>
    <fullName>Copropiedades__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copropiedades</label>
    <type>Checkbox</type>
</CustomField>