force-app/main/default/objects/Account/fields/Correo_electr_nico_Intermediario__c.field-meta.xml
<CustomField>
    <fullName>Correo_electr_nico_Intermediario__c</fullName>
    <label>Correo electrónico Intermediario</label>
    <type>Email</type>
</CustomField>