force-app/main/default/objects/Account/fields/CorreoElectronicoGS__c.field-meta.xml
<CustomField>
    <fullName>CorreoElectronicoGS__c</fullName>
    <description>Se crea el campo para notificaciones de Workflows</description>
    <formula>PersonEmail</formula>
    <label>Correo electrónico GS</label>
    <type>Text</type>
</CustomField>