force-app/main/default/objects/Account/fields/Cu_l_actividad__c.field-meta.xml
<CustomField>
    <fullName>Cu_l_actividad__c</fullName>
    <label>¿Cuál actividad?</label>
    <type>TextArea</type>
</CustomField>