force-app/main/default/objects/Account/fields/Cual__c.field-meta.xml
<CustomField>
    <fullName>Cual__c</fullName>
    <label>¿Cuál?</label>
    <length>80</length>
    <type>Text</type>
</CustomField>