force-app/main/default/objects/Account/fields/Cuales__c.field-meta.xml
<CustomField>
    <fullName>Cuales__c</fullName>
    <label>¿Cuáles?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>