force-app/main/default/objects/Account/fields/Cumplimiento__c.field-meta.xml
<CustomField>
    <fullName>Cumplimiento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cumplimiento</label>
    <type>Checkbox</type>
</CustomField>