force-app/main/default/objects/Account/fields/CursoActual__c.field-meta.xml
<CustomField>
    <fullName>CursoActual__c</fullName>
    <label>Curso actual</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre-kinder</fullName>
            </value>
            <value>
                <fullName>Kinder</fullName>
            </value>
            <value>
                <fullName>Transición</fullName>
            </value>
            <value>
                <fullName>Primero</fullName>
            </value>
            <value>
                <fullName>Segundo</fullName>
            </value>
            <value>
                <fullName>Tercero</fullName>
            </value>
            <value>
                <fullName>Cuarto</fullName>
            </value>
            <value>
                <fullName>Quinto</fullName>
            </value>
            <value>
                <fullName>Sexto</fullName>
            </value>
            <value>
                <fullName>Séptimo</fullName>
            </value>
            <value>
                <fullName>Octavo</fullName>
            </value>
            <value>
                <fullName>Kinder 5</fullName>
            </value>
            <value>
                <fullName>Kinder 4</fullName>
            </value>
            <value>
                <fullName>Pre-Colegio</fullName>
            </value>
            <value>
                <fullName>Kinder 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>