force-app/main/default/objects/Account/fields/Departamento__c.field-meta.xml
<CustomField>
    <fullName>Departamento__c</fullName>
    <formula>CiudadCorrespondencia__r.Padre__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departamento</label>
    <type>Text</type>
</CustomField>