force-app/main/default/objects/Account/fields/DepartamentoGE__c.field-meta.xml
<CustomField>
    <fullName>DepartamentoGE__c</fullName>
    <formula>CiudadCorrespondenciaGE__r.Padre__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departamento</label>
    <type>Text</type>
</CustomField>