force-app/main/default/objects/Account/fields/DepartamentoNacimientoCta__c.field-meta.xml
<CustomField>
    <fullName>DepartamentoNacimientoCta__c</fullName>
    <formula>CiudadNacimientoCta__r.Padre__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departamento de nacimiento</label>
    <type>Text</type>
</CustomField>