force-app/main/default/objects/Account/fields/Deportes__c.field-meta.xml
<CustomField>
    <fullName>Deportes__c</fullName>
    <label>Deportes</label>
    <type>TextArea</type>
</CustomField>