force-app/main/default/objects/Account/fields/DireccionCorrespondenciaGE__c.field-meta.xml
<CustomField>
    <fullName>DireccionCorrespondenciaGE__c</fullName>
    <label>Dirección de correspondencia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>