force-app/main/default/objects/Account/fields/DireccionResidencia__c.field-meta.xml
<CustomField>
    <fullName>DireccionResidencia__c</fullName>
    <label>Dirección de residencia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>