force-app/main/default/objects/Account/fields/Documentaci_n_Apertura_Clave__c.field-meta.xml
<CustomField>
    <fullName>Documentaci_n_Apertura_Clave__c</fullName>
    <defaultValue>&quot;1. Documentos Personal Natural&quot;&amp; BR()&amp; &quot; 2. Documentos Persona Jurídica&quot; &amp; BR()&amp;&quot;3. Ciclo de Capacitación (duración y temas)&quot; &amp; BR()&amp;&quot; 4. Reporte Centrales de Riesgo – Pagaré y carta de instrucciones, &quot; &amp; BR()&amp;&quot;5. Carta de No oposición &quot; &amp; BR()&amp;&quot;6. Hoja de vida de Global Seguros&quot; &amp; BR()&amp;&quot;7.Plan de Carrera&quot;</defaultValue>
    <label>Documentación (Apertura Clave)</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>