force-app/main/default/objects/Account/fields/Educativo__c.field-meta.xml
<CustomField>
    <fullName>Educativo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Educativo</label>
    <type>Checkbox</type>
</CustomField>