force-app/main/default/objects/Account/fields/Es_Beneficiario__c.field-meta.xml
<CustomField>
    <fullName>Es_Beneficiario__c</fullName>
    <label>Es Beneficiario</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Seguridad_Social__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>