force-app/main/default/objects/Account/fields/Estado_del_Asesor__c.field-meta.xml
<CustomField>
    <fullName>Estado_del_Asesor__c</fullName>
    <label>Estado del Asesor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aceptada</fullName>
            </value>
            <value>
                <fullName>Aplazado</fullName>
            </value>
            <value>
                <fullName>Entrevista Comercial</fullName>
            </value>
            <value>
                <fullName>Entrevista con Gestión Humana</fullName>
            </value>
            <value>
                <fullName>Pendiente Capacitación</fullName>
            </value>
            <value>
                <fullName>Rechazada</fullName>
            </value>
            <value>
                <fullName>Referidor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>