force-app/main/default/objects/Account/fields/EstadoCivil__c.field-meta.xml
<CustomField>
    <fullName>EstadoCivil__c</fullName>
    <label>Estado civil</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VIUDO</fullName>
            </value>
            <value>
                <fullName>SOLTERO</fullName>
            </value>
            <value>
                <fullName>CASADO</fullName>
            </value>
            <value>
                <fullName>DIVORCIADO</fullName>
            </value>
            <value>
                <fullName>NO SE TIENE</fullName>
            </value>
            <value>
                <fullName>SEPARADO</fullName>
            </value>
            <value>
                <fullName>UNION LIBRE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>