force-app/main/default/objects/Account/fields/EstadoCuenta__c.field-meta.xml
<CustomField>
    <fullName>EstadoCuenta__c</fullName>
    <label>Estado de la cuenta</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Posible Cliente</fullName>
                <default>true</default>
                <label>Posible Cliente</label>
            </value>
            <value>
                <fullName>Activo</fullName>
            </value>
            <value>
                <fullName>Inactivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>