force-app/main/default/objects/Account/fields/Eventos__c.field-meta.xml
<CustomField>
    <fullName>Eventos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eventos</label>
    <type>Checkbox</type>
</CustomField>