force-app/main/default/objects/Account/fields/Fallecido__c.field-meta.xml
<CustomField>
    <fullName>Fallecido__c</fullName>
    <formula>IF(ISBLANK(FechaFallecimiento__c), &quot;&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015110000009WZs&quot;, &quot;Fallecido&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fallecido</label>
    <type>Text</type>
</CustomField>