force-app/main/default/objects/Account/fields/Fecha_de_nacimiento_Tomador_Suscriptor__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_nacimiento_Tomador_Suscriptor__c</fullName>
    <label>Fecha de nacimiento (Tomador/Suscriptor)</label>
    <type>Date</type>
</CustomField>