force-app/main/default/objects/Account/fields/FechaFallecimiento__c.field-meta.xml
<CustomField>
    <fullName>FechaFallecimiento__c</fullName>
    <label>Fecha de fallecimiento</label>
    <type>Date</type>
</CustomField>