force-app/main/default/objects/Account/fields/FechaFinalizacionMaterias__c.field-meta.xml
<CustomField>
    <fullName>FechaFinalizacionMaterias__c</fullName>
    <label>Fecha finalización materias</label>
    <type>Date</type>
</CustomField>