force-app/main/default/objects/Account/fields/Funcionario__c.field-meta.xml
<CustomField>
    <fullName>Funcionario__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Funcionario</label>
    <type>Checkbox</type>
</CustomField>