force-app/main/default/objects/Account/fields/GozaReconocimientoPublico__c.field-meta.xml
<CustomField>
    <fullName>GozaReconocimientoPublico__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Goza de reconocimiento público</label>
    <type>Checkbox</type>
</CustomField>