force-app/main/default/objects/Account/fields/Hogar__c.field-meta.xml
<CustomField>
    <fullName>Hogar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hogar</label>
    <type>Checkbox</type>
</CustomField>