force-app/main/default/objects/Account/fields/IDPersona__c.field-meta.xml
<CustomField>
    <fullName>IDPersona__c</fullName>
    <label>ID Persona</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>