force-app/main/default/objects/Account/fields/IntermediarioCorredor2__c.field-meta.xml
<CustomField>
    <fullName>IntermediarioCorredor2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intermediario / Corredor 2</label>
    <referenceTo>Producer</referenceTo>
    <relationshipLabel>Accounts (Intermediario / Corredor2)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>