force-app/main/default/objects/Account/fields/IntermediarioCorredor3__c.field-meta.xml
<CustomField>
    <fullName>IntermediarioCorredor3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intermediario / Corredor 3</label>
    <referenceTo>Producer</referenceTo>
    <relationshipLabel>Accounts (Intermediario / Corredor)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>