force-app/main/default/objects/Account/fields/IntermediarioCorredor__c.field-meta.xml
<CustomField>
    <fullName>IntermediarioCorredor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intermediario / Corredor</label>
    <referenceTo>Producer</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>