force-app/main/default/objects/Account/fields/Liberty__c.field-meta.xml
<CustomField>
    <fullName>Liberty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Liberty</label>
    <type>Checkbox</type>
</CustomField>