force-app/main/default/objects/Account/fields/ManejaRecursosPublicos__c.field-meta.xml
<CustomField>
    <fullName>ManejaRecursosPublicos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maneja recursos públicos</label>
    <type>Checkbox</type>
</CustomField>