force-app/main/default/objects/Account/fields/Mapfre__c.field-meta.xml
<CustomField>
    <fullName>Mapfre__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mapfre</label>
    <type>Checkbox</type>
</CustomField>