force-app/main/default/objects/Account/fields/Mercado_Empresarial__c.field-meta.xml
<CustomField>
    <fullName>Mercado_Empresarial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mercado Empresarial</label>
    <type>Checkbox</type>
</CustomField>